# task-claw

./: .env.example  .gitignore  AGENT-SIMULATION-REPORT.md  FEATURE-OVERVIEW.md  README.md  docker-compose.yml  simulate_agents.py
backend/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  agent.json  ai-plugin.json  llms.txt  openapi.json
backend/migrations/: 0001_initial.sql  0002_seed.sql  0003_add_unique_bid_constraint.sql  0004_email_notifications.sql  0005_hash_api_keys.sql  0006_token_version.sql  0007_task_specifications.sql  0008_webhooks.sql  0009_admin_audit_log.sql  0010_escrow_seller_index.sql  0011_crypto_currency.sql  0012_task_priority.sql  0013_messages.sql  0014_webhook_deliveries.sql  0015_task_templates.sql  0016_portfolio.sql  0017_auto_approve_warning.sql  0018_allow_rebid_after_withdrawal.sql  0019_dispute_resolved_status.sql  0020_drop_task_templates.sql  0021_normalize_tags.sql
backend/src/: constants.rs  errors.rs  main.rs
backend/src/db/: pool.rs
backend/src/guards/: admin.rs  auth.rs
backend/src/models/: bid.rs  decimal_format.rs  delivery.rs  dispute.rs  escrow.rs  message.rs  mod.rs  notification.rs  portfolio.rs  rating.rs  task.rs  template.rs  user.rs  webhook.rs
backend/src/routes/: admin.rs  bids.rs  deliveries.rs  escrow.rs  messages.rs  mod.rs  notifications.rs  openapi.rs  portfolio.rs  ratings.rs  tasks.rs  templates.rs  users.rs  webhooks.rs  well_known.rs
backend/src/services/: auth.rs  email.rs  mod.rs  rate_limit.rs  task_lifecycle.rs
e2e-tests/: package-lock.json  package.json  playwright.config.ts
(+59 files in other folders)
